--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -5,10 +5,12 @@
         <li><a href="{{ site.baseurl }}/about/">about</a></li>
         <li><a href="{{ site.baseurl }}/who-we-are/">who we are</a></li>
         <li><a href="{{ site.baseurl }}/news/">news</a></li>
+        <li><a href="{{ site.baseurl }}/donate/">donate</a></li>
       {% else %}
         <li><a href="{{ site.baseurl }}/sobre/">sobre</a></li>
         <li><a href="{{ site.baseurl }}/quem-somos/">quem somos</a></li>
         <li><a href="{{ site.baseurl }}/noticias/">notícias</a></li>
+        <li><a href="{{ site.baseurl }}/doe/">doe</a></li>
     {% endcase %}
   </ul>
 </div>
@@ -16,15 +18,15 @@
   <ul>
     {% case page.lang %}
       {% when 'en' %}
-        <li><a href="{{ site.baseurl }}/en/caipiratechlab/">caipiraTech</a></li>
+        <li><a href="{{ site.baseurl }}/en/caipiratechlab/">caipiraTech lab</a></li>
         <li><a href="{{ site.baseurl }}/en/encontrada/">encontrada</a></li>
-        <li><a href="{{ site.baseurl }}/en/interactivos/">interactivos?</a></li>
-        <li><a href="{{ site.baseurl }}/en/residencia/">residência</a></li>
+        <li><a href="{{ site.baseurl }}/en/residencia/">residency</a></li>
+        <li><a href="{{ site.baseurl }}/en/labs/">labs</a></li>
       {% else %}
-        <li><a href="{{ site.baseurl }}/caipiratechlab/">caipiraTech</a></li>
+        <li><a href="{{ site.baseurl }}/caipiratechlab/">caipiraTech lab</a></li>
         <li><a href="{{ site.baseurl }}/encontrada/">encontrada</a></li>
-        <li><a href="{{ site.baseurl }}/interactivos/">interactivos?</a></li>
         <li><a href="{{ site.baseurl }}/residencia/">residência</a></li>
+        <li><a href="{{ site.baseurl }}/labs/">laboratórios</a></li>
     {% endcase %}
   </ul>
 </div>
