--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     {% include menu.html %}
+    {% include newsletter-popup.html %}
     <div class="main-div">
     
       <section class="content-text">{{ content }}</section>    
