--- a/_includes/newsletter-popup.html
+++ b/_includes/newsletter-popup.html
@@ -1,6 +1,14 @@
-<div  id="popup-newsletter" class="sidebar">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <div id="mc_embed_signup">
+<div  id="popup-newsletter" class="sidebar popup-show popup-hide">
+  <a href="javascript:void(0)" id="hide-popup" class="closebtn">×</a>
+    <div id="mc_embed_signup">
+    {% if page.lang == 'pt' %}
+    Fique por dentro das notícias<br>e convocatórias da Silo! 
+    {% else %}
+    Sign up to receive updates <br>and open calls! 
+    {% endif %}
+        <br>
+        <hr>
+        <br><br>
             <form action="https://silo.us20.list-manage.com/subscribe/post?u=34708f45e069e327474942d91&amp;id=4b3933b8f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
                   <div class="mc-field-group">
@@ -13,26 +21,25 @@
                   <div class="response" id="mce-success-response" style="display:none"></div>
                 </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                   <div style="position: absolute; right: -5000px;" aria-hidden="true"><input type="text" name="b_34708f45e069e327474942d91_4b3933b8f6" tabindex="-1" value=""></div>
-                  <br><br>
-                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                  <br>    
+                    {% if page.lang == 'pt' %}
+                  <div class="clear"><input type="submit" value="ASSINE" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                    {% else %}
+                  <div class="clear"><input type="submit" value="SIGN UP" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                    {% endif %}
                 </div>
             </form>
-        </div>
+    </div>
 </div>
 
 <div id="newsletter">
-    <button class="openbtn" onclick="openNav()">assine nossa newsletter</button>  
+    {% if page.lang == 'pt' %}
+    <button class="openbtn">&nbsp ASSINE NOSSA NEWSLETTER &nbsp</button>  
+    {% else %}
+    <button class="openbtn">SUBSCRIBE TO OUR NEWSLETTER</button>  {% endif %}
+    
 </div>
 
 
-<script>
-    function openNav() {
-      document.getElementById("popup-newsletter").style.width = "250px";
-    }
-    function closeNav() {
-      document.getElementById("popup-newsletter").style.width = "0";
-    }
+<script type="text/javascript" src="{{ site.baseurl }}/js/newsletter.js">
 </script>
-
-
-
