--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -5,6 +5,7 @@
     {% include meta.html %}
   </head>
   <body>
+    {% include newsletter-popup.html %}
     {% include menu.html %}
     <div class="main-div">
     
