newsletter pop up

--- a/_includes/newsletter-popup.html
+++ b/_includes/newsletter-popup.html
@@ -4,7 +4,7 @@
     {% if page.lang == 'pt' %}
     Fique por dentro das notícias<br>e convocatórias da Silo! 
     {% else %}
-    Sign up to receive updates <br>and open calls! 
+    Sign up to receive our news <br>and open calls! 
     {% endif %}
         <br>
         <hr>
@@ -43,3 +43,5 @@
 
 <script type="text/javascript" src="{{ site.baseurl }}/js/newsletter.js">
 </script>
+
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
