--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 <meta name="keywords" content="art, arte, latitude, rural">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src 'self' data: www.paypal.com www.paypalobjects.com; media-src 'self'; frame-src player.vimeo.com www.youtube.com www.mailchimp.com gallery.autodesk.com; frame-ancestors 'self'; script-src 'self' ajax.googleapis.com; font-src 'self' data: maxcdn.bootstrapcdn.com fonts.googleapis.com fonts.gstatic.com; style-src 'self' 'unsafe-inline' script-src 'unsafe-inline' maxcdn.bootstrapcdn.com fonts.googleapis.com; base-uri 'self'; form-action 'self' www.mailchimp.com www.paypal.com; ">
+<meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src 'self' data: www.paypal.com www.paypalobjects.com; media-src 'self'; frame-src player.vimeo.com www.youtube.com www.mailchimp.com gallery.autodesk.com; frame-ancestors 'self'; script-src 'self' ajax.googleapis.com; font-src 'self' data: maxcdn.bootstrapcdn.com fonts.googleapis.com fonts.gstatic.com; style-src 'self' 'unsafe-inline' script-src 'unsafe-inline' maxcdn.bootstrapcdn.com fonts.googleapis.com; base-uri 'self'; form-action 'self' www.mailchimp.com https://silo.us20.list-manage.com/subscribe/post?u=34708f45e069e327474942d91&id=4b3933b8f6 www.paypal.com; ">
 
 
 <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
