--- a/_includes/newsletter-popup.html
+++ b/_includes/newsletter-popup.html
@@ -12,7 +12,7 @@
             <form action="https://silo.us20.list-manage.com/subscribe/post?u=34708f45e069e327474942d91&amp;id=4b3933b8f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
                   <div class="mc-field-group">
-                    <label for="mce-EMAIL">Email</label>
+                    <label for="mce-EMAIL">email</label>
                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
                   </div>
                 <br>
@@ -36,12 +36,36 @@
     {% if page.lang == 'pt' %}
     <button class="openbtn">&nbsp ASSINE NOSSA NEWSLETTER &nbsp</button>  
     {% else %}
-    <button class="openbtn">SUBSCRIBE TO OUR NEWSLETTER</button>  {% endif %}
-    
+    <button class="openbtn">SUBSCRIBE TO OUR NEWSLETTER</button>  {% endif %}  
 </div>
-
 
 <script type="text/javascript" src="{{ site.baseurl }}/js/newsletter.js">
 </script>
 
+
+
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+
+<script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email'; /**
+ * Translated default messages for the $ validation plugin.
+ * Locale: PT_PT
+ */
+$.extend($.validator.messages, {
+	required: "Campo de preenchimento obrigat&oacute;rio.",
+	remote: "Por favor, corrija este campo.",
+	email: "Por favor, introduza um endere&ccedil;o eletr&oacute;nico v&aacute;lido.",
+	url: "Por favor, introduza um URL v&aacute;lido.",
+	date: "Por favor, introduza uma data v&aacute;lida.",
+	dateISO: "Por favor, introduza uma data v&aacute;lida (ISO).",
+	number: "Por favor, introduza um n&uacute;mero v&aacute;lido.",
+	digits: "Por favor, introduza apenas d&iacute;gitos.",
+	creditcard: "Por favor, introduza um n&uacute;mero de cart&atilde;o de cr&eacute;dito v&aacute;lido.",
+	equalTo: "Por favor, introduza de novo o mesmo valor.",
+	accept: "Por favor, introduza um ficheiro com uma extens&atilde;o v&aacute;lida.",
+	maxlength: $.validator.format("Por favor, n&atilde;o introduza mais do que {0} caracteres."),
+	minlength: $.validator.format("Por favor, introduza pelo menos {0} caracteres."),
+	rangelength: $.validator.format("Por favor, introduza entre {0} e {1} caracteres."),
+	range: $.validator.format("Por favor, introduza um valor entre {0} e {1}."),
+	max: $.validator.format("Por favor, introduza um valor menor ou igual a {0}."),
+	min: $.validator.format("Por favor, introduza um valor maior ou igual a {0}.")
+});}(jQuery));var $mcj = jQuery.noConflict(true);</script>
