--- a/_includes/submenu.html
+++ b/_includes/submenu.html
@@ -1,7 +1,6 @@
 {% if page.permalink == '/sobre/' %}
   <div class="about-nav">
-    <a class="nav-item" data-id='#o-que-e'>O que é</a>
-    <a class="nav-item" data-id='#o-que-fazemos'>O que fazemos</a>
+    <a class="nav-item" data-id='#o-que-fazemos'>Programas</a>
     <a class="nav-item" data-id='#historico'>Histórico</a>
     <a class="nav-item" data-id='#silo'>Silo</a>
     <a class="nav-item" data-id='#apoio'>Apoio</a>
@@ -10,8 +9,7 @@
 
 {% if page.permalink == '/about/' %}
   <div class="about-nav">
-    <a class="nav-item" data-id='#o-que-e'>What it is</a>
-    <a class="nav-item" data-id='#o-que-fazemos'>What we do</a>
+    <a class="nav-item" data-id='#o-que-fazemos'>Programs</a>
     <a class="nav-item" data-id='#historico'>History</a>
     <a class="nav-item" data-id='#silo'>Silo</a>
     <a class="nav-item" data-id='#apoio'>Support</a>
