--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -13,7 +13,7 @@
       </section>
       <!--- {% include people-group.html section="diretoria" %} --->
       {% include people-group.html section="associadas" %}
-      <!--- {% include people-group.html section="conselho" %} --->
+      {% include people-group.html section="conselho" %}
     </div>
     {% include footer.html %}
   </body>
