--- a/_includes/people-group.html
+++ b/_includes/people-group.html
@@ -6,6 +6,7 @@
         {% when 'diretoria' %}{% assign section_title = 'board' %}
         {% when 'conselho' %}{% assign section_title = 'council' %}
         {% when 'associadas' %}{% assign section_title = 'associates' %}
+        {% when 'equipe' %}{% assign section_title = 'team' %}
       {% endcase %}
     {% endif %}
     <h2 class="people-section-title">{{ section_title }}</h2>
