--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -14,6 +14,7 @@
       <!--- {% include people-group.html section="diretoria" %} --->
       {% include people-group.html section="associadas" %}
       {% include people-group.html section="conselho" %}
+      {% include people-group.html section="equipe" %}
     </div>
     {% include footer.html %}
   </body>
