--- a/css/main.scss
+++ b/css/main.scss
@@ -286,15 +286,15 @@ a {
     text-transform: uppercase;
     font: normal 1rem $FONT-MENU;
     vertical-align: middle;
-    padding: 8px 12px;
-    margin: 4px 0;
+    padding: 8px 5%;
+    margin: 2px 0;
     background-color: #000;
     color: #fff;
     border-radius: 6px;
     transition: background-color $TRANSITION-PERIOD linear;
-    width: 80%;
+    width: 90%;
     text-align: left;
-    margin-bottom: 64px;
+    margin-bottom: 20px;
 
     &:hover {
       color: white !important;
@@ -302,8 +302,7 @@ a {
     }
 
     @include media-query(DESKTOP) {
-      width: 100%;
-      margin: 0;
+      width: 90%;
       min-height: 34px;
       text-align: center;
     }
