montanhas silo links

--- a/_layouts/tree.html
+++ b/_layouts/tree.html
@@ -5,18 +5,18 @@
     {% include meta.html %}
   </head>
   <body id="links">
+        <img style="width:100%" src="{{ site.baseurl }}/media/images/gif-links.png">
     <div class="main-div">
       <section class="content-text">
-        <img src="{{ site.baseurl }}/media/images/gif-links.gif">
         {{ content }} 
         <br>     
         {% assign link = site.data.links | sort: 'index' %}
         {% for item in link %}
         <a class="nav-call" style="text-decoration:none; color:white;" href="{{ item.url }}">{{ item.title }}</a>
         {% endfor %}
-
         </section>  
-    </div>        
+    </div>      
+    <img style="width:100%" src="{{ site.baseurl }}/media/images/gif-links-2.png">  
     {% include footer.html %}
   </body>
 </html>
