--- a/css/main.scss
+++ b/css/main.scss
@@ -53,7 +53,14 @@ a {
 }
 
 #links{
+    max-width: 800px;
     background-color:#b3d4d4;
+    img{
+        width: 100%;
+    }
+    .main-div{
+        margin: 0 auto;   
+    }
 }
 
 #menu-mobile {
