--- a/css/main.scss
+++ b/css/main.scss
@@ -61,6 +61,13 @@ a {
     .main-div{
         margin: 0 auto;   
     }
+    .content-text a {
+    text-decoration: none;
+    }
+    .center{
+        margin-top: 10px;
+        text-align: center;
+    }
 }
 
 #menu-mobile {
