--- a/css/main.scss
+++ b/css/main.scss
@@ -55,6 +55,7 @@ a {
 #links{
     max-width: 800px;
     //background-color:#b3d4d4;
+    background-color: white;
     img{
         width: 100%;
     }
