--- a/css/main.scss
+++ b/css/main.scss
@@ -54,8 +54,8 @@ a {
 
 #links{
     max-width: 800px;
-    //background-color:#b3d4d4;
-    background-color: white;
+    background-color:#b3d4d4;
+    //background-color: white;
     img{
         width: 100%;
     }
@@ -70,7 +70,7 @@ a {
         text-align: center;
     }
     .fa{
-        color: #456079;
+        //color: #456079;
         font-size: 28px;
         margin: 5px;
     }
