--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,14 +8,18 @@
     {% include newsletter-popup.html %}
     {% include menu.html %}
     <div class="main-div">
-      <section class="content-text">{{ content }}
-        <br>    
-        {% if page.lang == 'en' %}
-                <a class="nav-call" style="text-decoration:none; color:white;" href="{{ site.baseurl }}/open-calls">Open Calls</a>    
-        {% else %}    
-                <a class="nav-call" style="text-decoration:none; color:white;" href="{{ site.baseurl }}/convocatorias">Convocatórias Abertas</a>
+      <section class="content-text">
+        {{ content }}
+        {% assign opencalls = site.posts | where:"lang", page.lang | where:"category", "callopen" | size %}
+        {% if opencalls > 0 %}
+          <br>
+          {% if page.lang == 'en' %}
+            <a class="nav-call" href="{{ site.baseurl }}/open-calls">Open Calls</a>
+          {% else %}
+            <a class="nav-call" href="{{ site.baseurl }}/convocatorias">Convocatórias Abertas</a>
+          {% endif %}
         {% endif %}
-          </section>
+      </section>
       <section class="list-wrapper">
         {% assign news = 'Últimas Notícias' %}
         {% if page.lang == 'en' %}
