--- a/css/main.scss
+++ b/css/main.scss
@@ -296,42 +296,6 @@ a {
   }
 }
 
-  .nav-call {
-    a {
-        color: white !important;
-        text-decoration: none !important;
-        font: normal 1rem $FONT-MENU;
-        &:hover {
-        }
-    } 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-transform: uppercase;
-    font: normal 1rem $FONT-MENU;
-    vertical-align: middle;
-    padding: 8px 5%;
-    margin: 2px 0;
-    background-color: #000;
-    color: #fff;
-    border-radius: 6px;
-    transition: background-color $TRANSITION-PERIOD linear;
-    width: 90%;
-    text-align: left;
-    margin-bottom: 20px;
-
-    &:hover {
-      color: white !important;
-      background-color: #888;
-    }
-
-    @include media-query(DESKTOP) {
-      width: 90%;
-      min-height: 34px;
-      text-align: center;
-    }
-  }
-
 .people-nav {
   max-width: 700px;
   margin: 0 auto;
@@ -410,6 +374,35 @@ a {
   img {
     display: block;
     width: 100%;
+  }
+
+  a.nav-call {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    font: normal 1rem $FONT-MENU;
+    vertical-align: middle;
+    padding: 8px 5%;
+    margin: 2px 0;
+    background-color: #000;
+    color: #fff;
+    border-radius: 6px;
+    transition: background-color $TRANSITION-PERIOD linear;
+    width: 90%;
+    text-align: center;
+    margin-bottom: 20px;
+
+    &:hover {
+      color: white;
+      background-color: #888;
+    }
+
+    @include media-query(DESKTOP) {
+      width: 90%;
+      min-height: 34px;
+    }
   }
 }
 
