--- a/css/main.scss
+++ b/css/main.scss
@@ -71,7 +71,7 @@ a {
         text-align: center;
     }
     .fa{
-        //color: #456079;
+        color: #f4d6a2;
         font-size: 28px;
         margin: 5px;
     }
