--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,15 @@
         integrity="sha384-rY/jv8mMhqDabXSo+UCggqKtdmBfd3qC2/KvyTDNQ6PcUJXaxK1tMepoQda4g5vB"
         crossorigin="anonymous"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VE4PHTSLT7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VE4PHTSLT7');
+</script>
 
 {% if page.swipebox %}
   <link rel="stylesheet" href="{{ site.baseurl }}/css/swipebox.min.css">
