--- a/css/main.scss
+++ b/css/main.scss
@@ -54,9 +54,7 @@ a {
 
 #links{
     max-width: 800px;
-    background-color:#386650;
-    //background-color:#b3d4d4;
-    //background-color: white;
+    background-color:black;
     img{
         width: 100%;
     }
@@ -71,7 +69,7 @@ a {
         text-align: center;
     }
     .fa{
-        color: #f4d6a2;
+        color: white;
         font-size: 28px;
         margin: 5px;
     }
