Foto Lila w nova notícia

--- a/css/main.scss
+++ b/css/main.scss
@@ -822,3 +822,16 @@ i.fa-1_5x {
 
 .clear{  
 }
+
+.img-2col-legenda{
+  width: 49%;
+  display: inline-flex;
+  text-align: center;
+}
+
+.img-center-legenda{
+  display: inline-flex;
+  text-align: center;
+  margin-left: 24%;
+  margin-right: 24%;
+}
