Nova notícia e layout imagens
- notícia do cabaré Brutal
- 3 novos layouts para disposição de post do Instagram nas notícias
    - .img-center-legenda
    - .imgdupla-legenda-center
    - .duasimg-legenda-center

--- a/css/main.scss
+++ b/css/main.scss
@@ -830,8 +830,29 @@ i.fa-1_5x {
 }
 
 .img-center-legenda{
-  display: inline-flex;
   text-align: center;
-  margin-left: 24%;
-  margin-right: 24%;
+}
+
+.img-center-legenda img {
+    width: 48%;
+    margin: auto;
+}
+
+.imgdupla-legenda-center{
+  text-align: center;
+}
+
+.imgdupla-legenda-center img {
+    width: 48%;
+    display: inline-flex;
+}
+
+.duasimg-legenda-center{
+  text-align: center;
+}
+
+.duasimg-legenda-center img {
+    width: 48%;
+    display: inline-flex;
+    margin: 5px;
 }
