--- a/css/main.scss
+++ b/css/main.scss
@@ -831,11 +831,8 @@ i.fa-1_5x {
 
 .img-center-legenda{
   text-align: center;
-}
-
-.img-center-legenda img {
-    width: 48%;
-    margin: auto;
+  margin-left: 24%;
+  margin-right: 24%;
 }
 
 .imgdupla-legenda-center{
