Inclusão projeto Silo Escola

--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -27,6 +27,7 @@
         <li><a href="{{ site.baseurl }}/encontrada/">encontrada</a></li>
         <li><a href="{{ site.baseurl }}/residencia/">residência</a></li>
         <li><a href="{{ site.baseurl }}/labs/">laboratórios</a></li>
+        <li><a href="{{ site.baseurl }}/siloescola/">silo escola</a></li>
     {% endcase %}
   </ul>
 </div>
