Ajustes apontados por Ewald em email

--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -22,6 +22,7 @@
         <li><a href="{{ site.baseurl }}/en/encontrada/">encontrada</a></li>
         <li><a href="{{ site.baseurl }}/en/residencia/">residency</a></li>
         <li><a href="{{ site.baseurl }}/en/labs/">labs</a></li>
+        <li><a href="{{ site.baseurl }}/siloescola/">silo escola</a></li>
       {% else %}
         <li><a href="{{ site.baseurl }}/caipiratechlab/">caipiraTech lab</a></li>
         <li><a href="{{ site.baseurl }}/encontrada/">encontrada</a></li>
