--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,13 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1WE9CCC79R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1WE9CCC79R');
+</script>
+
 <title>{{ page.title }}</title>
 
 {% if page.subtitle %}
