--- a/css/main.scss
+++ b/css/main.scss
@@ -853,3 +853,60 @@ i.fa-1_5x {
     display: inline-flex;
     margin: 5px;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000000000000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fb4672;
+  color: #fff;
+  margin: 15% auto;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 700px;
+  ul{
+    padding-left: 25px;
+    li{
+      padding: 10px 0px 10px 0px;
+    }
+  }
+  .modal-body{
+    border-radius: 3px;
+    border-width: 1px;
+    border-color: #C0CCD9;
+    border-style: solid;
+    margin: 40px;
+    h3{
+      margin-left: 15px;
+    }
+    a{
+      color: #eff1f4;
+      font-weight: bold;
+    }
+  }
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  padding: 10px
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
