Inclui o menu Transparência

--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -11,6 +11,7 @@
         <li><a href="{{ site.baseurl }}/quem-somos/">quem somos</a></li>
         <li><a href="{{ site.baseurl }}/noticias/">notícias</a></li>
         <li><a href="{{ site.baseurl }}/doe/">doe</a></li>
+        <li><a href="{{ site.baseurl }}/transparencia/">Transparência</a></li>
     {% endcase %}
   </ul>
 </div>
