--- a/css/main.scss
+++ b/css/main.scss
@@ -376,7 +376,9 @@ a {
     display: block;
     width: 100%;
   }
-
+  .certificado{
+    width: 50% !important;
+  }
   a.nav-call {
     display: flex;
     flex-direction: column;
