Remove chamadas encerradas do modal

--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -2,18 +2,9 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <div class="modal-body">
-        <h3>A Silo está com convocatórias abertas:</h3>
-        <ul>
-            <li>
-               Para organizações (privadas e públicas): <a href="/silo-escola-2023">Inscreva-se no curso da Silo Escola "Como Fazer Laboratórios?"</a>
-            </li>
-            <li>
-                Para artistas e curadores: <a href="/resiliencia-2023">Inscreva-se para a Resiliência - Residência Artística</a>
-            </li>
-            <li>
-                Para agricultores e produtores de alimentos: <a href="/caipiratechlab2023">Inscreva-se para o Curso CaipiratechLAB 2023</a>
-            </li>
-        </ul>
+        <h3>Atenção, artistas e curadores!</h3>
+        <p>Inscrições para a Resiliência: Residência Artística, prorrogadas até 21 de maio (domingo)!</p>
+        <p><a href="/resiliencia-2023"> Clique aqui para acessar a chamada!</a></p>
     </div>
   </div>
 
