--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     {% include newsletter-popup.html %}
-    {% include modal.html %}
+    <!-- {% include modal.html %} -->
     {% include menu.html %}
     <div class="main-div">
       <section class="content-text">
