Adiciona chamada para javascript Google Analytics passando o ID da nova tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -75,6 +75,7 @@
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VE4PHTSLT7"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1WE9CCC79R"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
