--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -2,9 +2,24 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <div class="modal-body">
-        <h3>Atenção, artistas e curadores!</h3>
-        <p>Inscrições para a Resiliência: Residência Artística, prorrogadas até 21 de maio (domingo)!</p>
-        <p><a href="/resiliencia-2023"> Clique aqui para acessar a chamada!</a></p>
+        <h3>Vagas abertas na Silo para:</h3>
+        <ol>
+          <li>
+            Mulheres e pessoas trans;
+          </li>
+          <li>
+            Da região do Vale do Rio Paraíba e Serra da Mantiqueira, de preferência das cidades a menos de 2:30h de Resende
+          </li>
+        </ol>
+        <p>Acesse a chamada e preencha o formulário:
+          <ul>
+            <li>
+              <a href="https://silo.org.br/vaga-moderador-comunidade-caipiratechLAB/">Moderadora no grupo Portal CaipiratechLAB</a>
+            </li>
+            <li>
+              <a href="https://silo.org.br/vaga-designer-na-silo/"> Designer/Ilustrador/a/e</a>
+            </li>
+          </ul>
     </div>
   </div>
 
