--- a/_includes/submenu.html
+++ b/_includes/submenu.html
@@ -3,7 +3,7 @@
     <a class="nav-item" data-id='#o-que-fazemos'>Programas</a>
     <a class="nav-item" data-id='#historico'>Histórico</a>
     <a class="nav-item" data-id='#silo'>Silo</a>
-    <a class="nav-item" data-id='#apoio'>Apoio</a>
+    <a class="nav-item" data-id='#apoio'>Recursos</a>
   </div>
 {% endif %}
 
