--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -14,7 +14,7 @@
         <p>Acesse a chamada e preencha o formulário:
           <ul>
             <li>
-              <a href="https://silo.org.br/vaga-moderador-comunidade-caipiratechLAB/">Moderadora no grupo Portal CaipiratechLAB</a>
+              <a href="https://silo.org.br/vaga-gerenciamento-comunidades/">Gerenciamento de Comunidades Digitais</a>
             </li>
             <li>
               <a href="https://silo.org.br/vaga-designer-na-silo/"> Designer/Ilustrador/a/e</a>
